[gd_scene load_steps=10 format=3 uid="uid://bvx14fsgbc67y"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_cl8hx"]
[ext_resource type="PackedScene" uid="uid://dcyj7fwt7o4h4" path="res://scenes/Character.tscn" id="2_kdcvk"]
[ext_resource type="Texture2D" uid="uid://bwvov37yq0fyy" path="res://assets/tilesets/ground_tileset.png" id="3_i6tok"]
[ext_resource type="Texture2D" uid="uid://ccodvgdnueuc2" path="res://assets/ui/contract_icon.png" id="4_bbm2d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f0oos"]
texture = ExtResource("3_i6tok")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_hdnc6"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_f0oos")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0d0w"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.337255, 0.337255, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs54f"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.337255, 0.337255, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ve4d8"]
bg_color = Color(0, 0, 0, 0.498039)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.686275, 0.627451, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main" type="Node2D"]
script = ExtResource("1_cl8hx")

[node name="World" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="World"]
tile_set = SubResource("TileSet_hdnc6")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 131072, 0, 2, 196608, 0, 3, 262144, 0, 0, 327680, 0, 1, 393216, 0, 2, 458752, 0, 3, 524288, 0, 0, 589824, 0, 1, 655360, 0, 2, 720896, 0, 3, 1, 65536, 0, 65537, 65536, 1, 131073, 65536, 2, 196609, 65536, 3, 262145, 65536, 0, 327681, 65536, 1, 393217, 65536, 2, 458753, 65536, 3, 524289, 65536, 0, 589825, 65536, 1, 655361, 65536, 2, 720897, 65536, 3, 2, 131072, 0, 65538, 131072, 1, 131074, 131072, 2, 196610, 131072, 3, 262146, 131072, 0, 327682, 131072, 1, 393218, 131072, 2, 458754, 131072, 3, 524290, 131072, 0, 589826, 131072, 1, 655362, 131072, 2, 720898, 131072, 3, 3, 196608, 0, 65539, 196608, 1, 131075, 196608, 2, 196611, 196608, 3, 262147, 196608, 0, 327683, 196608, 1, 393219, 196608, 2, 458755, 196608, 3, 524291, 196608, 0, 589827, 196608, 1, 655363, 196608, 2, 720899, 196608, 3, 4, 0, 0, 65540, 0, 1, 131076, 0, 2, 196612, 0, 3, 262148, 0, 0, 327684, 0, 1, 393220, 0, 2, 458756, 0, 3, 524292, 0, 0, 589828, 0, 1, 655364, 0, 2, 720900, 0, 3, 5, 65536, 0, 65541, 65536, 1, 131077, 65536, 2, 196613, 65536, 3, 262149, 65536, 0, 327685, 65536, 1, 393221, 65536, 2, 458757, 65536, 3, 524293, 65536, 0, 589829, 65536, 1, 655365, 65536, 2, 720901, 65536, 3, 6, 131072, 0, 65542, 131072, 1, 131078, 131072, 2, 196614, 131072, 3, 262150, 131072, 0, 327686, 131072, 1, 393222, 131072, 2, 458758, 131072, 3, 524294, 131072, 0, 589830, 131072, 1, 655366, 131072, 2, 720902, 131072, 3, 7, 196608, 0, 65543, 196608, 1, 131079, 196608, 2, 196615, 196608, 3, 262151, 196608, 0, 327687, 196608, 1, 393223, 196608, 2, 458759, 196608, 3, 524295, 196608, 0, 589831, 196608, 1, 655367, 196608, 2, 720903, 196608, 3, 8, 0, 0, 65544, 0, 1, 131080, 0, 2, 196616, 0, 3, 262152, 0, 0, 327688, 0, 1, 393224, 0, 2, 458760, 0, 3, 524296, 0, 0, 589832, 0, 1, 655368, 0, 2, 720904, 0, 3, 9, 65536, 0, 65545, 65536, 1, 131081, 65536, 2, 196617, 65536, 3, 262153, 65536, 0, 327689, 65536, 1, 393225, 65536, 2, 458761, 65536, 3, 524297, 65536, 0, 589833, 65536, 1, 655369, 65536, 2, 720905, 65536, 3, 10, 131072, 0, 65546, 131072, 1, 131082, 131072, 2, 196618, 131072, 3, 262154, 131072, 0, 327690, 131072, 1, 393226, 131072, 2, 458762, 131072, 3, 524298, 131072, 0, 589834, 131072, 1, 655370, 131072, 2, 720906, 131072, 3, 11, 196608, 0, 65547, 196608, 1, 131083, 196608, 2, 196619, 196608, 3, 262155, 196608, 0, 327691, 196608, 1, 393227, 196608, 2, 458763, 196608, 3, 524299, 196608, 0, 589835, 196608, 1, 655371, 196608, 2, 720907, 196608, 3, 12, 0, 0, 65548, 0, 1, 131084, 0, 2, 196620, 0, 3, 262156, 0, 0, 327692, 0, 1, 393228, 0, 2, 458764, 0, 3, 524300, 0, 0, 589836, 0, 1, 655372, 0, 2, 720908, 0, 3, 13, 65536, 0, 65549, 65536, 1, 131085, 65536, 2, 196621, 65536, 3, 262157, 65536, 0, 327693, 65536, 1, 393229, 65536, 2, 458765, 65536, 3, 524301, 65536, 0, 589837, 65536, 1, 655373, 65536, 2, 720909, 65536, 3, 14, 131072, 0, 65550, 131072, 1, 131086, 131072, 2, 196622, 131072, 3, 262158, 131072, 0, 327694, 131072, 1, 393230, 131072, 2, 458766, 131072, 3, 524302, 131072, 0, 589838, 131072, 1, 655374, 131072, 2, 720910, 131072, 3, 15, 196608, 0, 65551, 196608, 1, 131087, 196608, 2, 196623, 196608, 3, 262159, 196608, 0, 327695, 196608, 1, 393231, 196608, 2, 458767, 196608, 3, 524303, 196608, 0, 589839, 196608, 1, 655375, 196608, 2, 720911, 196608, 3, 16, 0, 0, 65552, 0, 1, 131088, 0, 2, 196624, 0, 3, 262160, 0, 0, 327696, 0, 1, 393232, 0, 2, 458768, 0, 3, 524304, 0, 0, 589840, 0, 1, 655376, 0, 2, 720912, 0, 3, 17, 65536, 0, 65553, 65536, 1, 131089, 65536, 2, 196625, 65536, 3, 262161, 65536, 0, 327697, 65536, 1, 393233, 65536, 2, 458769, 65536, 3, 524305, 65536, 0, 589841, 65536, 1, 655377, 65536, 2, 720913, 65536, 3, 18, 131072, 0, 65554, 131072, 1, 131090, 131072, 2, 196626, 131072, 3, 262162, 131072, 0, 327698, 131072, 1, 393234, 131072, 2, 458770, 131072, 3, 524306, 131072, 0, 589842, 131072, 1, 655378, 131072, 2, 720914, 131072, 3, 19, 196608, 0, 65555, 196608, 1, 131091, 196608, 2, 196627, 196608, 3, 262163, 196608, 0, 327699, 196608, 1, 393235, 196608, 2, 458771, 196608, 3, 524307, 196608, 0, 589843, 196608, 1, 655379, 196608, 2, 720915, 196608, 3)
layer_1/name = "Objects"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="ContractZone" type="Area2D" parent="World"]
position = Vector2(640, 400)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="World/ContractZone"]
scale = Vector2(2, 2)
texture = ExtResource("4_bbm2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/ContractZone"]

[node name="Label" type="Label" parent="World/ContractZone"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.0
offset_top = 30.0
offset_right = 97.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 0
text = "Contract Signing Area"
horizontal_alignment = 1

[node name="Characters" type="Node2D" parent="World"]
y_sort_enabled = true

[node name="TenantStartPosition" type="Marker2D" parent="World/Characters"]
position = Vector2(261, 453)

[node name="Tenant" parent="World/Characters" instance=ExtResource("2_kdcvk")]
position = Vector2(261, 453)
character_name = "Tenant"
character_type = "tenant"
is_active = true

[node name="Landlords" type="Node2D" parent="World/Characters"]
y_sort_enabled = true

[node name="Landlord_1" parent="World/Characters/Landlords" instance=ExtResource("2_kdcvk")]
position = Vector2(867, 266)
character_name = "Mr. Smith"
character_type = "landlord"

[node name="Landlord_2" parent="World/Characters/Landlords" instance=ExtResource("2_kdcvk")]
position = Vector2(432, 263)
character_name = "Ms. Johnson"
character_type = "landlord"

[node name="Landlord_3" parent="World/Characters/Landlords" instance=ExtResource("2_kdcvk")]
position = Vector2(663, 203)
character_name = "Mr. Davis"
character_type = "landlord"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="World"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIPanel" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_j0d0w")

[node name="StatusLabel" type="Label" parent="CanvasLayer/UIPanel"]
layout_mode = 2
size_flags_vertical = 0
text = "Ready to start negotiation"
horizontal_alignment = 1

[node name="MessageContainer" type="VBoxContainer" parent="CanvasLayer/UIPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ButtonsPanel" type="PanelContainer" parent="CanvasLayer/UIPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_bs54f")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UIPanel/ButtonsPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="CanvasLayer/UIPanel/ButtonsPanel"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start Negotiation"

[node name="ResetButton" type="Button" parent="CanvasLayer/UIPanel/ButtonsPanel"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset Simulation"

[node name="InfoPanel" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ve4d8")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InfoPanel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rental Agent Simulation"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="CanvasLayer/InfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Watch AI agents negotiate rental agreements in real-time!"
autowrap_mode = 2
